Make RuntimeDynamics compatible with Java 9+ (#30)
* Fix java 9+ new anonymous object handling

* update build

* Try to fix tests

* update CHANGELOG